--- a/index.html
+++ b/index.html
@@ -2,19 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <H1> FORMULARIO DE CADASTRO DE ALUNOS </H1>
-    <FORM>
-    <p>Nome completo: <input type="text" name="nome" id="nome" </p>
-
-
-
-
-
-    </FORM>
 </body>
-</html>
+<h1> FORMULÁRIO CADASTRO DE ALUNOS</h1>
+<form>
+    <p>NOME COMPLETO: <input type="text" name="NOME" id="NOME" </p>
+    <p>Idade <input type=" text" name="Idade" id="Idade" :</p>
+    <p>Endereço Residencial <input type="text" name="Endereço Residencial": </p>
+    <p>Turma <input type="text" name="Turma" id="Turma" </p>
+    <p>Nome Responsavel <input type="text" name="Nome Responsavel" id="Nome Responsavel": </p>
+    <p>Turno <input type="text" name="Turno" id="Turno" : </p>
+    <p>Contato <input type="text" name="Contato" id="Contato" :</p>
+    <p>Cidade <input type="Cidade" name="Cidade" id="Cidade" :</p>
+    <p> <input type ="submit"</p>
+</form>
